# hp

./: .gitignore  README.md
CFtoBF/: CMakeLists.txt  b3dmain.cc  cftobf.cc  progdata  udsdata
alice/CFtoBF/: CMakeLists.txt  b3d  b3dmain.cc  progdata
alice/D0.5/: CMakeLists.txt  bigrunner_b3d.sh  bigrunner_both.sh  bigrunner_hydro2uds.sh  makefile  runner_b3d.sh  runner_both.sh  runner_hydro2uds.sh
alice/D1/: CMakeLists.txt  b3d_fromhydro.cc  bigrunner_b3d.sh  bigrunner_both.sh  hydro2uds.cc  runner_b3d.sh
alice/D1_bigsigma/: runner_b3d.sh
alice/D1_sigma0.5/: runner_both.sh
alice/D1_sigma1/: bigrunner_b3d.sh
alice/D1_sigma1_cheap/: runner_b3d.sh  udsdata
alice/D1_sigma2/: runner_b3d.sh
alice/D2/: bigrunner.sh  bigrunner_b3d.sh  bigrunner_both.sh  makefile
alice/D2_sigma1/: bigrunner_both.sh
alice/D4/: b3dmain.cc  bigrunner_b3d.sh  bigrunner_both.sh  bigrunner_hydro2uds.sh  makefile  phitest.cc  runner_b3d.sh  runner_both.sh
alice/D4_sigma0.5/: runner_both.sh
alice/Dtest/: CMakeLists.txt  bigrunner_b3d.sh  bigrunner_both.sh  hydro2uds.cc
alice/acc_correction/: b3dmain.cc  bigrunner_b3d.sh
alice/claudia/: CMakeLists.txt  bfnorm.cc  claudia  claudia.cc
alice/claudia/figs/: bfnorm.py  chi.py  chiBB.py  uds.py
alice/claudia/latticedata/: c2S.cont  c2ud.cont  c2us.cont
alice/figs_varyD/: bf_eta.py  bf_eta_allcents.py  bf_phi1phi.py  bf_phi1phi_star.py  bf_phi1phi_star_old.py  bf_phi_KK.py  bf_phi_KK_test.py  bf_phi_allcents.py  bf_phi_pipi.py  bf_phi_pp.py  bf_phi_varyD.py  bf_y.py  bf_y_KK.py  bf_y_KK_test.py  bf_y_pipi.py  crap.ipynb  general_y.py  general_y_hydrovscascade.py  generalcrap.py
alice/figs_varyD/alicedata/: alice_KKdata.txt  alice_pipidata.txt  alice_ppdata.txt
alice/fromcascade/: CMakeLists.txt  b3d  b3d_fromcascade.cc  b3dmain.cc  balance_fromcascade.cc  bigrunner_b3d.sh  bigrunner_balance.sh  makefile  model_output  runb3d.sb  runner_b3d.sh  runner_balance.sh
alice/fromcascadeB1/: bigrunner_b3d.sh  runner_b3d.sh
alice/fromcascade_cheap/: bigrunner_b3d.sh
alice/fromcascadetest/: CMakeLists.txt  b3d_fromcascade.cc  balance_fromcascade.cc  bigrunner_b3d.sh
alice/latticedata/: README.txt
alice/run/: bigrunner_b3d.sh  runner.sh
alice/software/: makefile
alice/software/b3d2/: CMakeLists.txt  Makefile  makefile
alice/software/b3d2/include/: acceptance.h  b3d.h  balancearrays.h  cell.h  hyper.h  mutinfo.h  part.h  regen.h  resonances.h  sampler.h  seinfo.h
alice/software/b3d2/include/defunct/: b3ddefs.h  charge.h
alice/software/b3d2/src/: Increment  acceptance.cc  acceptance_ALICE.cc  acceptance_STAR.cc  acceptance_cheap.cc  action.cc  action_perform.cc  action_perform_activate.cc  action_perform_collide.cc  action_perform_decay.cc  action_perform_exitcell.cc  action_perform_regen.cc  addaction.cc  anal_balanceQGP.cc  anal_hbt.cc  anal_spectra.cc  annihilate.cc  b3d.cc  b3dio.cc  b3dsubs.cc  balancearrays.cc  bfdist.cc  bfnumer.cc  cell.cc  charge.cc  collide.cc  decay.cc  findcollision.cc  hyper.cc  inelastic.cc  makepart.cc  mucalc.cc  mutinfo.cc  part.cc  regen.cc  resonances.cc  sampler.cc  scatter.cc  seinfo.cc  volume_element.cc
alice/software/b3d2/src/deprecated/: anal_balance.cc  anal_v2.cc  oldsampler.cc
alice/software/b3d2/src/eqofst/: makefile
alice/software/commonutils/include/: gslmatrix.h  misc.h  randy.h
alice/software/commonutils/include/defunct/: coralutils.h
alice/software/commonutils/src/Arrays/: arraycalc.cc  charray.cc  charray.cc.tmp  threed.cc  threed.cc.tmp
alice/software/commonutils/src/ParameterMap/: parametermap.cc
alice/software/commonutils_defunct/: makefile
alice/software/commonutils_defunct/include/: arrays.h  commondefs.h  parametermap.h  qualifier.h  sf.h
alice/software/commonutils_defunct/src/BMaker/: bmaker.cc
alice/software/commonutils_defunct/src/Misc/: misc.cc
alice/software/commonutils_defunct/src/ParameterMap/: parametermap.cc.tmp
alice/software/commonutils_defunct/src/Qualifiers/: qualifier.cc
alice/software/coral/include/: kernel.h  sfit.h  sourcecalc.h
alice/software/coral/src/CF2Source/: sfit.cc
alice/software/coral/src/Kernel/: kernel.cc
alice/software/coral/src/Source2CF/: source2cf.cc
alice/software/coral/src/SourceCalc/: sourcecalc.cc  sourcecalc_OSCAR.cc  sourcecalc_OSCAR_multibin.cc  sourcecalc_blast.cc  sourcecalc_ellipticblast.cc  sourcecalc_gauss.cc  sourcecalc_getgausspars.cc
alice/software/hydrobalance/: CMakeLists.txt  makefile
alice/software/hydrobalance/include/: charge.h  eos.h  hydro2uds.h
alice/software/hydrobalance/include/defunct/: acceptance.h  balance.h  hbdefs.h  hbpart.h  hyper.h  misc.h  part.h  randy.h  resonances.h
alice/software/hydrobalance/src/: edit_files.sh  eos.cc  hbcharge.cc  hbio.cc  hydro2uds.cc  hyperfind.cc  mesh.cc  trajectory.cc
alice/software/hydrobalance/src/defunct/: acceptance.cc  acceptance_ALICE.cc  acceptance_STAR.cc  acceptance_cheap.cc  balance.cc  bfarrays.cc  cftestsubs.cc  chiinv.cc  crap.cc  decay.cc  hbpart.cc  hyper.cc  makepart.cc  misc.cc  resonances.cc
alice/software/hydrobalance/src/staracceptance_NoID/manuel/: StEffAccFunc.cc  StEffAccFunc.h  testefffunc.cc
alice/software/hydrobalance/src/staracceptance_NoID/manuel/full_field/: acceptancePiMinusHi.txt  efficiencyPiMinusHi.txt
alice/software/hydrobalance/src/staracceptance_NoID/manuel/half_field/: acceptanceKMinusHi.txt  acceptanceKMinusLo.txt  acceptanceKMinusMe.txt  acceptanceKPlusHi.txt  acceptanceKPlusLo.txt  acceptanceKPlusMe.txt  acceptancePbarHi.txt  acceptancePbarLo.txt  acceptancePbarMe.txt  acceptancePiMinusHi.txt  acceptancePiMinusLo.txt  acceptancePiMinusMe.txt  acceptancePiPlusHi.txt  acceptancePiPlusLo.txt  acceptancePiPlusMe.txt  acceptanceProtonHi.txt  acceptanceProtonLo.txt  acceptanceProtonMe.txt  efficiencyKMinusHi.txt  efficiencyKMinusLo.txt  efficiencyKMinusMe.txt  efficiencyKPlusHi.txt  efficiencyKPlusLo.txt  efficiencyKPlusMe.txt  efficiencyPbarHi.txt  efficiencyPbarLo.txt  efficiencyPbarMe.txt  (+9 more)
alice/software/hydrobalance/src/staracceptance_NoID/marguerite/: Makefile  staracceptance.cc
(+40 files in other folders)
